# ci

./: README.md  bump-stubs.sh  consumers.txt
.github/workflows/: ci-node.yml  ci-python.yml  ci-vault.yml  self-check.yml
checks/scrub-secrets/: README.md  action.yml  pyproject.toml
checks/scrub-secrets/scrub_secrets/: __init__.py  cli.py  core.py  patterns-public.json
checks/scrub-secrets/tests/: test_patterns.py
